#INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/tests")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}) 

SET( TEST_LIBRARIES symbol_table_engine ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES} )
SET( TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../)

SET( UpcATests_SRCS upcATest.cpp )
SET( TEST_LIBRARIES ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES} )
QT4_AUTOMOC( ${UpcATests_SRCS} ${product_engines_SRC} )
ADD_EXECUTABLE( UpcATests ${UpcATests_SRCS} )
TARGET_LINK_LIBRARIES( UpcATests ${TEST_LIBRARIES} product_engines)
ADD_TEST( NAME UpcATests COMMAND UpcATests )