#INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/tests")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}) 

# SET( TEST_LIBRARIES symbol_table_engine ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES} )
SET( TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../)

SET( TEST_LIBRARIES ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES} )

SET( UpcATests_SRCS upcATest.cpp )
QT4_AUTOMOC( ${UpcATests_SRCS} ${product_engines_SRC} )
ADD_EXECUTABLE( UpcATests ${UpcATests_SRCS} )
TARGET_LINK_LIBRARIES( UpcATests ${TEST_LIBRARIES} product_engines)
ADD_TEST( NAME UpcATests COMMAND UpcATests )

# SET( Ean13Tests_SRCS ean13Test.cpp )
# QT4_AUTOMOC( ${Ean13Tests_SRCS} ${product_engines_SRC} )
# ADD_EXECUTABLE( Ean13Tests ${Ean13Tests_SRCS} )
# TARGET_LINK_LIBRARIES( Ean13Tests ${TEST_LIBRARIES} product_engines)
# ADD_TEST( NAME Ean13Tests COMMAND Ean13Tests )
# 
# SET( Ean8Tests_SRCS ean8Test.cpp )
# QT4_AUTOMOC( ${Ean8Tests_SRCS} ${product_engines_SRC} )
# ADD_EXECUTABLE( Ean8Tests ${Ean8Tests_SRCS} )
# TARGET_LINK_LIBRARIES( Ean8Tests ${TEST_LIBRARIES} product_engines)
# ADD_TEST( NAME Ean8Tests COMMAND Ean8Tests )